# dhall-resume

./: CHANGELOG.md  README.md  default.nix  dhall-cv.cabal  dhall-cv.nix  dhall-resume.cabal  dhall-resume.nix  hie.yaml  nixpkgs.json  release.nix  shell.nix
app/: Main.hs
css/: style.css
dhall/types/: Award.dhall  Basics.dhall  CV.dhall  CVSection.dhall  ContactInfo.dhall  Date.dhall  Experience.dhall  Interest.dhall  Job.dhall  Language.dhall  Link.dhall  Location.dhall  Name.dhall  Profiles.dhall  Publication.dhall  Resume.dhall  Section.dhall  SectionContent.dhall  Skill.dhall  SkillCategory.dhall  Social.dhall  Study.dhall  Volunteer.dhall  package.dhall
nix/: sources.json
src/: CV.hs  Resume.hs
src/CV/: Types.hs
src/CV/Backend/: LaTeX.hs
src/Resume/: Types.hs
src/Resume/Backend/: Html.hs  LaTeX.hs
test/: Spec.hs
