name:               dhall-resume
version:            0.1.0.1
license:            MIT
license-file:       LICENSE
author:             Matt Wittmann
maintainer:         mcwitt@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md
cabal-version:      >= 1.10

library
  exposed-modules:  Resume
                    Resume.Backend.Html
                    Resume.Backend.LaTeX
                    Resume.Types
  hs-source-dirs:   src
  build-depends:    base         >= 4.12.0 && < 4.13
                  , HaTeX        >= 3.22.2 && < 3.23
                  , data-default >= 0.7.1 && < 0.8
                  , dhall        >= 1.30.0 && < 1.31
                  , lucid        >= 2.9.12 && < 2.10
                  , pandoc       >= 2.9.1 && < 2.10
                  , text         >= 1.2.3 && < 1.3
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates -fno-warn-orphans

executable dhall-resume
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base                 >= 4.12.0 && < 4.13
                  , dhall-resume
                  , optparse-applicative >= 0.15.1 && < 0.16
                  , text                 >= 1.2.3 && < 1.3
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates

test-suite dhall-resume-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base           >= 4.12.0 && < 4.13
                  , dhall-resume
                  , hspec          >= 2.7.1
                  , raw-strings-qq >= 1.1
                  , text           >= 1.2.3 && < 1.3
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates
