cabal-version:      3.0
name:               dhall-resume
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         mcwitt@gmail.com
author:             Matt Wittmann
bug-reports:        https://github.com/mcwitt/dhall-resume
synopsis:           Generate resumes in a variety of formats
description:
  Generate resumes in a variety of formats from a common description in the Dhall configuration language.

extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Resume
    Resume.Backend.Html
    Resume.Backend.LaTeX
    Resume.Types

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates -fno-warn-orphans
  build-depends:
    , base            ^>=4.13.0
    , clay            ^>=0.13.3
    , data-default    ^>=0.7.1
    , dhall           ^>=1.30.0
    , HaTeX           ^>=3.22.2
    , lucid           ^>=2.9.12
    , mtl             ^>=2.2.2
    , pandoc          ^>=2.9.1
    , raw-strings-qq  ^>=1.1
    , text            ^>=1.2.4

executable dhall-resume
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates
  build-depends:
    , base                  ^>=4.13.0
    , dhall-resume
    , optparse-applicative  ^>=0.15.1
    , text                  ^>=1.2.4

test-suite dhall-resume-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates
  build-depends:
    , base            ^>=4.13.0
    , dhall-resume
    , hspec           ^>=2.7.1
    , raw-strings-qq  ^>=1.1
    , text            ^>=1.2.4
